# back-to-basics

./: 404.html  CMakeLists.txt  CNAME  LICENSE  index.html  mkdocs.yml  sitemap.xml
1_hello_world/: index.html
2_build_system/: index.html
3_creating_a_window/: index.html
4_manipulating_pixels/: index.html
5_hello_triangle/: index.html
6_three_dimensions/: index.html
docs/: 1_hello_world.md  2_build_system.md  3_creating_a_window.md  4_manipulating_pixels.md  5_hello_triangle.md  6_three_dimensions.md  index.md
docs/overrides/: main.html
search/: search_index.json
src/: game_window.c  game_window.h  hello_world.c  main.c  math.h  math_utils.h  renderer.c  renderer.h  vertex_transform.c  vertex_transform.h
